nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: nginx
spec:
    containers:
    - name: nginx-container
      image: registry.hub.docker.com/library/nginx
